welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:15: error: ';' expected but ')' found.
      if (j+i<T.length){setCouleurBrosse(T(j+i)));baisseBrosse();leveBrosse()=}} while (estFaceMur==false);
                                                ^